--- a/Plugins/FEBioHeat/VS2013/FEBioHeat/FEBioHeat.vcxproj.filters
+++ b/Plugins/FEBioHeat/VS2013/FEBioHeat/FEBioHeat.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\..\FEBioHeat\FEPlotHeatFlux.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\FEBioHeat\FEGapHeatFlux.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\FEBioHeat\FEConvectiveHeatFlux.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\FEBioHeat\FEPlotHeatFlux.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\FEBioHeat\FEGapHeatFlux.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
